Add verification checks